# CainCamera

./: .gitignore  settings.gradle
app/: build.gradle
app_bc/: build.gradle
app_bc/src/main/: AndroidManifest.xml
app_bc/src/main/java/com/llk/app_bc/: MainActivity.java
app_bc/src/main/res/layout/: activity_main.xml
app_bc/src/main/res/values/: strings.xml  styles.xml
beautyCamera/: build.gradle
beautyCamera/src/main/: AndroidManifest.xml
beautyCamera/src/main/cpp/: CMakeLists.txt
beautyCamera/src/main/cpp/FFCommand/: CMakeLists.txt  main_ffmpeg_utils.cpp
beautyCamera/src/main/java/com/llk/beauty_camera/: BaseBeautyCameraComponent.java  BeautyCameraManager.java  CameraTextureView.java  IBaseComponentlifecycle.java
beautyCamera/src/main/java/com/llk/beauty_camera/camera/: CalculateType.java  CameraApi.java  CameraController.java  CameraParam.java  CameraXController.java  ICameraController.java  ImageConvert.java  OnFrameAvailableListener.java  OnSurfaceTextureListener.java  PreviewCallback.java  PreviewCallbackAnalyzer.java
beautyCamera/src/main/java/com/llk/beauty_camera/editor/: FFmpegUtils.java  MediaCommandEditor.java
beautyCamera/src/main/java/com/llk/beauty_camera/recorder/: BCMediaRecorder.java  LlkMuxer.java  MediaInfo.java  MediaType.java  OnRecordListener.java  OnRecordStateListener.java  RecordInfo.java  SpeedMode.java
beautyCamera/src/main/java/com/llk/beauty_camera/renderer/: CameraRenderHandler.java  CameraRenderer.java  FrameRateMeter.java  GLImageReader.java  (+3 more)
cameralibrary/: build.gradle
filterlibrary/: build.gradle
(+41 files in other folders)
